# pipescope

./: .gitignore  CAPSTONE_REPORT.md  CAPSTONE_REPORT_AM.docx  CVE_SUPPORT.md  Final_Report.md  GITHUB_ACTION_GUIDE.md  UNIVERSITY_REPORT_AM.md  commands.txt  missing.txt  pyproject.toml  ref_links  ref_links.md  requirements.txt  result_jenkins.json  result_jenkins_ai.json  result_jenkins_no_target.json  result_jenkins_no_target_v2.json  results.json  results_cve_test.json  results_cve_test_k8s.json  test_docker_results.json  test_results.json  tranlated_to_armenian.docx  tranlated_to_armenian.md
.github/actions/pipescope/: action.yml
.github/workflows/: pipescope.yml
pipescope/: cli.py
pipescope.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pipescope/core/: ai_advisor.py  cicd_detector.py  compose_scanner.py  cve_lookup.py  dockerfile_scanner.py  dockerignore_scanner.py  gha_observe.py  github_summary.py  gitlab_observe.py  gitlab_scanner.py  gitleaks_adapter.py  jenkins_observe.py  jenkins_scanner.py  k8s_scanner.py  models.py  pdf_report.py  rule_engine.py  rules_eval.py  scan.py  secrets_scanner.py  weak_secrets.py  web_recon.py
pipescope/rules/: cicd_github_actions.toml  cicd_gitlab.toml  cicd_jenkins.toml  secrets.toml
pipescope/utils/: fs.py  target.py
pipescope/wordlists/: common.txt  quickhits.txt
repos/: results.json
scripts/: generate_capstone_report_am_docx.py  translate_md_to_docx.py
test_repo/: Dockerfile
tests/: test_ai_github_summary.py  test_k8s_scanner.py
